Done but quiet messy

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <script src="script.js"></script>
 </head>
 <body>
-    
+    <main>
+        <h1>ROCK-PAPER-SCISSOR</h1>
+        <div id="game">
+            <button onclick="rockbtn()" id="rock">Rock</button>
+            <button onclick="paperbtn()" id="paper">Paper</button>
+            <button onclick="scissorbtn()" id="scissor">Scissor</button><br>
+            <button onclick="letsplay()">Play</button>
+        </div>
+    </main>
 </body>
 </html>
